# ascii85encoder-api

./: CONTRIBUTING.md  README.md  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/ascii85encoder/: APIClient.java  APIException.java  APIResponse.java
android/src/main/java/com/apiverve/ascii85encoder/data/: ResponseModels.java
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: ASCII85EncoderAPIClient.cs  ASCII85EncoderAPIClient.csproj  ASCII85EncoderAPIClient.sln  ASCII85EncoderQueryOptions.cs  Readme.md  ResponseObj.cs
python/: README.md  pyproject.toml
python/src/apiverve_ascii85encoder/: __init__.py  apiClient.py  exceptions.py  setup.py  setup_dep.py
python/src/apiverve_ascii85encoder/tests/: test_api.py
python/tests/: test_api.py
